--- a/Style.css
+++ b/Style.css
@@ -3678,6 +3678,10 @@ body {
   padding: 0 3rem;
 }
 
+.accordion__item__button {
+  align-items: center;
+}
+
 @media (min-width: 1200px) {
   .faq {
     display: flex;
